--- a/src/components/MenuTop/styles.css
+++ b/src/components/MenuTop/styles.css
@@ -1,10 +1,20 @@
 .container {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
+  align-items: center; 
   width: 100%;
   border-bottom: 1px solid #e9e9e9;
 }
 
 .container ul {
   border: 0;
+}
+
+.logo {
+  font-size: 1.1rem;
+  margin-left: 1rem;
+}
+
+.logo small {
+  padding: 1rem;
 }
