--- a/src/components/MedicineForm/styles.css
+++ b/src/components/MedicineForm/styles.css
@@ -1,4 +1,9 @@
 .container {
   width: 100%;
-  max-width: 500px;
+  max-width: 600px;
+}
+
+.button__container {
+  display: flex;
+  justify-content: flex-end;
 }
